tests/baselines/reference/isolatedDeclarationErrorsAugmentation.errors.txt
parent.ts(1,1): error TS9026: Declaration emit for this file requires preserving this import for augmentations. This is not supported with --isolatedDeclarations.


==== child1.ts (0 errors) ====
    import { ParentThing } from './parent';
    
    declare module './parent' {
        interface ParentThing {
            add: (a: number, b: number) => number;
        }
    }
    
    export function child1(prototype: ParentThing) {
        prototype.add = (a: number, b: number) => a + b;
    }
    
==== parent.ts (1 errors) ====
    import { child1 } from './child1'; // this import should still exist in some form in the output, since it augments this module
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9026: Declaration emit for this file requires preserving this import for augmentations. This is not supported with --isolatedDeclarations.
    
    export class ParentThing implements ParentThing {}
    
    child1(ParentThing.prototype);